<resources>
    <string name="app_name">VIT CGPA Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="grade_text">Grade</string>
    <string name="credits_text">Credits</string>
    <string name="calculate_gpa">Calculate GPA</string>
    <string name="title_activity_gpa">Your GPA</string>
    <string name="enter_prev_cgpa">Enter your current CGPA</string>
    <string name="calculate_cgpa">Calculate CGPA</string>
    <string name="current_gpa">Your GPA will be:</string>
    <string name="title_activity_cgpa">Your CGPA</string>
    <string name="your_cgpa">Your CGPA will be:</string>
    <string name="share_text">Share It!</string>
    <string name="total_credits_text">Total Credits (Including this Sem)</string>
</resources>
