<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_gpa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.demonzblood.vitcgpacalculator.GPAActivity"
    tools:showIn="@layout/activity_gpa">

    <Button
        android:text="@string/calculate_cgpa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="101dp"
        android:id="@+id/calculateCgpa"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/enter_prev_cgpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterCgpa"
        android:textSize="24sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="6"
        android:id="@+id/prevCgpa"
        android:textAlignment="center"
        android:layout_above="@+id/calculateCgpa"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="0.0" />

    <TextView
        android:text="@string/current_gpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/yourGpa"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="6"
        android:layout_marginTop="22dp"
        android:id="@+id/totalCredits"
        android:layout_below="@+id/creditsText"
        android:layout_alignStart="@+id/prevCgpa"
        android:text="0"
        android:textAlignment="center" />

    <TextView
        android:text="GPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currGpa"
        android:textSize="30sp"
        android:layout_marginTop="34dp"
        android:textColor="?attr/colorAccent"
        android:layout_below="@+id/yourGpa"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/total_credits_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/creditsText"
        android:textSize="18sp"
        android:layout_below="@+id/currGpa"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
