<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.demonzblood.vitcgpacalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="6"
        android:layout_marginTop="19dp"
        android:id="@+id/editText1"
        android:textSize="12sp"
        android:layout_below="@+id/credits"
        android:layout_alignEnd="@+id/credits"
        android:layout_marginEnd="12dp"
        android:textAlignment="center"
        android:text="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/editText2"
        android:textSize="12sp"
        android:layout_alignEnd="@+id/credits"
        android:layout_marginEnd="12dp"
        android:layout_below="@+id/editText1"
        android:textAlignment="center"
        android:text="0"
        android:inputType="numberSigned" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/editText6"
        android:textSize="12sp"
        android:layout_below="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:textAlignment="center"
        android:text="0"
        android:inputType="numberSigned" />

    <TextView
        android:text="@string/credits_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:id="@+id/credits"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/editText3"
        android:textSize="12sp"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:textAlignment="center"
        android:text="0"
        android:inputType="numberSigned" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/editText4"
        android:textSize="12sp"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:textAlignment="center"
        android:text="0"
        android:inputType="numberSigned" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/editText5"
        android:textSize="12sp"
        android:layout_below="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:textAlignment="center"
        android:text="0"
        android:inputType="numberSigned" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/editText7"
        android:textSize="12sp"
        android:layout_below="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:textAlignment="center"
        android:text="0"
        android:inputType="numberSigned" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="6"
        android:textSize="12sp"
        android:layout_below="@+id/editText7"
        android:layout_alignStart="@+id/editText7"
        android:id="@+id/editText8"
        android:textAlignment="center"
        android:text="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/editText9"
        android:textSize="12sp"
        android:layout_below="@+id/editText8"
        android:layout_alignStart="@+id/editText8"
        android:textAlignment="center"
        android:text="0"
        android:inputType="numberSigned" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/editText10"
        android:textSize="12sp"
        android:layout_below="@+id/editText9"
        android:layout_alignStart="@+id/editText9"
        android:textAlignment="center"
        android:text="0"
        android:inputType="numberSigned" />

    <TextView
        android:text="@string/grade_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="49dp"
        android:id="@+id/grade"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/credits"
        android:layout_alignBottom="@+id/credits"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/editText20"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/editText10"
        android:layout_alignBottom="@+id/editText10"
        android:layout_alignStart="@+id/editText19"
        android:textAlignment="center"
        android:text="NA" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/editText19"
        android:textSize="12sp"
        android:layout_above="@+id/editText20"
        android:layout_alignStart="@+id/editText18"
        android:textAlignment="center"
        android:text="NA" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/editText18"
        android:textSize="12sp"
        android:layout_above="@+id/editText19"
        android:layout_alignStart="@+id/editText17"
        android:textAlignment="center"
        android:text="NA" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/editText16"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/editText6"
        android:layout_alignBottom="@+id/editText6"
        android:layout_alignStart="@+id/editText15"
        android:textAlignment="center"
        android:text="NA" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/editText17"
        android:textSize="12sp"
        android:layout_below="@+id/editText16"
        android:layout_alignStart="@+id/editText16"
        android:textAlignment="center"
        android:text="NA" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/editText15"
        android:textSize="12sp"
        android:layout_above="@+id/editText16"
        android:layout_alignStart="@+id/editText14"
        android:textAlignment="center"
        android:text="NA" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/editText14"
        android:textSize="12sp"
        android:layout_above="@+id/editText15"
        android:layout_alignStart="@+id/editText13"
        android:textAlignment="center"
        android:text="NA" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/editText13"
        android:textSize="12sp"
        android:layout_above="@+id/editText14"
        android:layout_alignStart="@+id/editText12"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:text="NA" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/editText12"
        android:textSize="12sp"
        android:layout_above="@+id/editText13"
        android:layout_alignStart="@+id/editText11"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:text="NA" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/editText11"
        android:textSize="12sp"
        android:layout_above="@+id/editText12"
        android:layout_alignStart="@+id/grade"
        android:textAlignment="center"
        android:text="NA" />

    <Button
        android:text="@string/calculate_gpa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/calculateGpa"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/editText10"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
